--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "modal": "^1.2.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "the-new-css-reset": "^1.11.2"
   },
